# Coursera-NLP

./: .gitignore  README.md  pyproject.toml  recipe_preprocessing.py  requirements.txt  test_process_tweets.py  test_recipe_preprocessing.py  text_preprocessing.py
Coursera-InteractiveWordEmbeddingsUsing/: Task2_EDA-Preprocessing.ipynb
Coursera-IntroductionToLLMs/: requirements.txt
Coursera-IntroductionToLLMs/week1/: lab1.ipynb
Coursera-IntroductionToLLMs/week2/: Lab_2_fine_tune_generative_ai_model_colab.ipynb
Coursera-NameEntityRecognitionWithKeras/: Learner_Notebook.ipynb  NER.ipynb  NER.ipynb:Zone.Identifier  ner_dataset.csv:Zone.Identifier
Coursera-NameEntityRecognitionWithKeras/tf/: pyvenv.cfg
Coursera-NaturalLanguageProcessing/: keras_practice.ipynb  numpy_practice.ipynb  requirements.txt  tensor_practice.ipynb  test_process_tweets.py  text_preprocessing.py  trax_practice.ipynb
Coursera-NaturalLanguageProcessing/Sequence_Models/: .python-version  numpy_practice.ipynb  requirements.txt
Coursera-NaturalLanguageProcessing/week1/: logistic-regression.ipynb  word_frequencies.ipynb
Coursera-NaturalLanguageProcessing/week3/: LinearAlgebra.ipynb
InteractiveWordEmbeddingsUsing/: Task3_Word2Vec.ipynb  Task4_Results.ipynb  Task5_InteractiveVisualization.ipynb
RecipeClassification/: recipeClassification.ipynb
RecipeRecommendation/: recipeDataPreprocessing.ipynb  recipePreprocessing.ipynb  test.csv
basic_chatbot/: db.sqlite3  functions.py  main.py  requirements.txt  sentence_tokenizer.pickle
sequence_models/: README.md
vector_spaces/: knn_tweets.ipynb
(+95 files in other folders)
